# myqtalbums

./: CMakeLists.txt
albumlib/: CMakeLists.txt
